--- a/configs/experiment1_compas_config.yaml
+++ b/configs/experiment1_compas_config.yaml
@@ -1,6 +1,7 @@
 dataset_name: COMPAS_Without_Sensitive_Attributes
 test_set_fraction: 0.2
 bootstrap_fraction: 0.8
-n_estimators: 10
-runs_seed_lst: [100, 200, 300, 400, 500, 600]
+n_estimators: 100
+runs_seed_lst: [100, 200]
+#runs_seed_lst: [100, 200, 300, 400, 500, 600]
 sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}
