--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,29 @@
 site_name: My Docs
+site_description: Responsible AI Toolset in Python
+
 theme:
   name: material
+  language: en
+  palette:
+    primary: indigo
+    accent: indigo
+  font:
+    text: Rubik
+    code: Roboto Mono
+
+# Extensions
+markdown_extensions:
+  - admonition
+  - footnotes
+  - toc:
+      permalink: true
+      toc_depth: "1-3"
+  - pymdownx.details
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.highlight
+  - pymdownx.superfences
+
+plugins:
+  - search
+  - awesome-pages
