--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *_venv
 .DS_Store
 .ipynb_checkpoints
+*.env
 
 # Created by https://www.gitignore.io/api/python,pycharm+all
 # Edit at https://www.gitignore.io/?templates=python,pycharm+all
