--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .ipynb_checkpoints
 *.env
 *.out
+notebooks/test_notebooks
 
 # Created by https://www.gitignore.io/api/python,pycharm+all
 # Edit at https://www.gitignore.io/?templates=python,pycharm+all
