--- a/notebooks/diff_proportions/experiment_config.yaml
+++ b/notebooks/diff_proportions/experiment_config.yaml
@@ -1,8 +1,8 @@
 
-dataset_name: Credit
+dataset_name: COMPAS
 bootstrap_fraction: 0.8
 # n_estimators: 50
 n_estimators: 10
 # num_runs: 5
 num_runs: 2
-sensitive_attributes_dct: {'age': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]}
+sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}
