--- a/notebooks/models_stress_testing/experiment_config.yaml
+++ b/notebooks/models_stress_testing/experiment_config.yaml
@@ -1,8 +1,7 @@
 
-dataset_name: Folktables_GA_2018
+dataset_name: COMPAS
 bootstrap_fraction: 0.8
-# n_estimators: 50
-n_estimators: 10
-# num_runs: 5
-num_runs: 2
-sensitive_attributes_dct: {'SEX': '1', 'RAC1P': '1', 'AGEP': [30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40], 'SEX & RAC1P & AGEP': None}
+n_estimators: 50  # Better to input the higher number of estimators than 100; this is only for this use case example
+num_runs: 3
+runs_seed_lst: [100, 200, 300]
+sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}
