--- a/experiment_config.yaml
+++ b/experiment_config.yaml
@@ -1,7 +1,8 @@
 
 dataset_name: COMPAS
 bootstrap_fraction: 0.8
-n_estimators: 200  # Better to input the higher number of estimators than 100; this is only for this use case example
+# n_estimators: 200  # Better to input the higher number of estimators than 100; this is only for this use case example
+n_estimators: 10
 num_runs: 1
 runs_seed_lst: [100]
 sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}
