--- a/notebooks/models_stress_testing/experiment_config.yaml
+++ b/notebooks/models_stress_testing/experiment_config.yaml
@@ -1,7 +1,9 @@
 
-dataset_name: COMPAS
+dataset_name: COMPAS_Without_Sensitive_Attributes
 bootstrap_fraction: 0.8
 n_estimators: 50  # Better to input the higher number of estimators than 100; this is only for this use case example
-num_runs: 3
-runs_seed_lst: [100, 200, 300]
+# num_runs: 3
+num_runs: 2
+# runs_seed_lst: [100, 200, 300]
+runs_seed_lst: [200, 300]
 sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}
