Created a structure for the repo

--- a/notebooks/error_analysis/compas_config.yaml
+++ b/notebooks/error_analysis/compas_config.yaml
@@ -1,6 +1,8 @@
-dataset_name: COMPAS
-test_set_fraction: 0.2
+dataset_name: COMPAS_Without_Sensitive_Attributes
 bootstrap_fraction: 0.8
-n_estimators: 200
-runs_seed_lst: [100, 200, 300, 400, 500, 600, 700, 800, 900]
+n_estimators: 10
+#n_estimators: 50
+computation_mode: error_analysis
+num_runs: 2
+runs_seed_lst: [100, 200]
 sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}
