--- a/notebooks/mult_repair_levels_income_GA/folk_GA_2018_config.yaml
+++ b/notebooks/mult_repair_levels_income_GA/folk_GA_2018_config.yaml
@@ -1,6 +1,7 @@
 dataset_name: Folktables_GA_2018_Income
 bootstrap_fraction: 0.8
-n_estimators: 200
+n_estimators: 50
+#n_estimators: 200
 computation_mode: error_analysis
 num_runs: 1
 runs_seed_lst: [100]
