--- a/notebooks/out_of_domain_uncertainty_rich_income/rich_income_2018_config.yaml
+++ b/notebooks/out_of_domain_uncertainty_rich_income/rich_income_2018_config.yaml
@@ -1,5 +1,6 @@
 dataset_name: Folktables_2018_Income
 bootstrap_fraction: 0.8
-n_estimators: 200
+n_estimators: 2
+#n_estimators: 200
 computation_mode: error_analysis
 sensitive_attributes_dct: {'SEX': '2', 'RAC1P': ['2', '3', '4', '5', '6', '7', '8', '9'], 'SEX & RAC1P': None}
