--- a/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_pubcov/folk_CA_2018_config.yaml
+++ b/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_pubcov/folk_CA_2018_config.yaml
@@ -3,4 +3,4 @@ bootstrap_fraction: 0.8
 n_estimators: 200
 computation_mode: error_analysis
 sensitive_attributes_dct: {'SEX': '2', 'RAC1P': ['2', '3', '4', '5', '6', '7', '8', '9'], 'SEX & RAC1P': None}
-postprocessing_sensitive_attribute: 'RACE'
+postprocessing_sensitive_attribute: 'SEX&RAC1P_binary'
