Prepared notebooks to test meta learner mode

--- a/notebooks/test_meta_learner/acs_income/folk_GA_2018_config.yaml
+++ b/notebooks/test_meta_learner/acs_income/folk_GA_2018_config.yaml
@@ -1,5 +1,4 @@
-dataset_name: Folktables_CA_2018_Income
-bootstrap_fraction: 0.8
+dataset_name: Folktables_GA_2018_Income
+computation_mode: meta_learner
 n_estimators: 10
-computation_mode: error_analysis
 sensitive_attributes_dct: {'SEX': '2', 'RAC1P': ['2', '3', '4', '5', '6', '7', '8', '9'], 'SEX & RAC1P': None}
