--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-virny==0.4.0
+virny@git+https://github.com/DataResponsibly/Virny.git@development
 requests-toolbelt==1.0.0
 numpy==1.23.5
 matplotlib~=3.6.2
